Closed Bug 505725 Opened 16 years ago Closed 16 years ago

nsWifiMonitor::DoScan seems to leak ndis_handle in all failure cases

Categories

(Core :: Networking, defect)

ARM
Windows CE
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity, memory-leak)

Attachments

(1 file, 1 obsolete file)

338 nsWifiMonitor::DoScan() 343 HANDLE ndis_handle; 344 GETADAPTERSINFO pGetAdaptersInfo; 345 nsresult rc = SetupWince(ndis_handle, pGetAdaptersInfo); 384 BYTE *buffer = (BYTE*)malloc(oid_buffer_size_); 385 if (buffer == NULL) it leaks here: 386 return NS_ERROR_OUT_OF_MEMORY; and here: 496 return NS_ERROR_OUT_OF_MEMORY;
Attached patch patch (obsolete) — Splinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #390133 - Flags: review?(doug.turner)
Comment on attachment 390133 [details] [diff] [review] patch kill this line all together: - + What about the wlan_library library too?
Attachment #390133 - Flags: review?(doug.turner) → review-
Attached patch reviewedSplinter Review
that's bug 505726
Attachment #390133 - Attachment is obsolete: true
Attachment #390316 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: