Bug 505725 nsWifiMonitor::DoScan seems to leak ndis_handle in all failure cases r=dougt